packages/build/tests/error/build/fixtures/cancel/plugin.js
module.exports = {
  async onPreBuild({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
